syntax = "proto3";
package authzed.api.v1;

option go_package = "github.com/authzed/authzed-go/proto/authzed/api/v1";
option java_package = "com.authzed.api.v1";

import "validate/validate.proto";

// Relationship specifies how a resource relates to a subject. Relationships form the data
// for the graph over which all permissions questions are answered.
message Relationship {
  // resource is the resource to which the subject is related, in some manner
  ObjectReference resource = 1 [ (validate.rules).message.required = true ];

  // relation is how the resource and subject are related.
  string relation = 2 [ (validate.rules).string = {
    pattern : "^([a-z][a-z0-9_]{2,62}[a-z0-9])?$",
    max_bytes : 64,
  } ];

  // subject is the subject to which the resource is related, in some manner.
  SubjectReference subject = 3 [ (validate.rules).message.required = true ];
}

// SubjectReference is used for referring to the subject portion of a
// Relationship. The relation component is optional and is used for defining a
// sub-relation on the subject, e.g. group:123#members
message SubjectReference {
  ObjectReference object = 1;
  string optional_relation = 2 [ (validate.rules).string = {
    pattern : "^([a-z][a-z0-9_]{2,62}[a-z0-9])?$",
    max_bytes : 64,
  } ];
}

// ObjectReference is used to refer to a specific object in the system.
message ObjectReference {
  string object_type = 1 [ (validate.rules).string = {
    pattern : "^([a-z][a-z0-9_]{2,62}[a-z0-9]/)?[a-z][a-z0-9_]{2,62}[a-z0-9]$",
    max_bytes : 128,
  } ];
  string object_id = 2 [ (validate.rules).string = {
    pattern : "^[a-zA-Z0-9_][a-zA-Z0-9/_-]{0,63}$",
    max_bytes : 64,
  } ];
}

// ZedToken is used to provide causality metadata between Write and Check
// requests. See the Consistency message in acl_service.proto for more information.
message ZedToken {
  string token = 1 [ (validate.rules).string = {
    min_bytes : 1,
  } ];
}

// RelationshipUpdate is used for mutating a single relationship within the
// service.
//
// CREATE will create the relationship only if it doesn't exist, and error
// otherwise.
//
// TOUCH will upsert the relationship, and will not error if it
// already exists.
//
// DELETE will delete the relationship and error if it doesn't
// exist.
message RelationshipUpdate {
  enum Operation {
    OPERATION_UNSPECIFIED = 0;
    OPERATION_CREATE = 1;
    OPERATION_TOUCH = 2;
    OPERATION_DELETE = 3;
  }
  Operation operation = 1 [ (validate.rules).enum.defined_only = true ];
  Relationship relationship = 2 [ (validate.rules).message.required = true ];
}

// PermissionRelationshipTree is used for representing a tree of a resource and
// its permission relationships with other objects.
message PermissionRelationshipTree {
  oneof tree_type {
    AlgebraicSubjectSet intermediate = 1;
    DirectSubjectSet leaf = 2;
  }
  ObjectReference expanded_object = 3;
  string expanded_relation = 4;
}

// AlgebraicSubjectSet is a subject set which is computed based on applying the
// specified operation to the operands according to the algebra of sets.
//
// UNION is a logical set containing the subject members from all operands.
//
// INTERSECTION is a logical set containing only the subject members which are
// present in all operands.
//
// EXCLUSION is a logical set containing only the subject members which are
// present in the first operand, and none of the other operands.
message AlgebraicSubjectSet {
  enum Operation {
    OPERATION_UNSPECIFIED = 0;
    OPERATION_UNION = 1;
    OPERATION_INTERSECTION = 2;
    OPERATION_EXCLUSION = 3;
  }

  Operation operation = 1;
  repeated PermissionRelationshipTree children = 2;
}

// DirectSubjectSet is a subject set which is simply a collection of subjects.
message DirectSubjectSet { repeated SubjectReference subjects = 1; }
