syntax = "proto3";
package authzed.api.v0;

option go_package = "github.com/authzed/authzed-go/proto/authzed/api/v0";
option java_package = "com.authzed.api.v0";

import "google/protobuf/any.proto";
import "validate/validate.proto";

import "authzed/api/v0/core.proto";

message Metadata {
  repeated google.protobuf.Any metadata_message = 1 [
    (validate.rules).repeated .min_items = 1,
    (validate.rules).repeated .items.message.required = true,

    // NOTE: This is generating code without the associated map, which we added in manually
    // until it is fixed upstream.
    // See: https://github.com/envoyproxy/protoc-gen-validate/issues/481
    (validate.rules).repeated .items.any = {
      in: [
        "type.googleapis.com/impl.v1.DocComment",
        "type.googleapis.com/impl.v1.RelationMetadata"
      ],
      required: true,
    }
  ];
}

message NamespaceDefinition {
  string name = 1 [ (validate.rules).string = {
    pattern : "^([a-z][a-z0-9_]{2,62}[a-z0-9]/)?[a-z][a-z0-9_]{2,62}[a-z0-9]$",
    max_bytes : 128,
  } ];

  repeated Relation relation = 2;
  Metadata metadata = 3;
}

message Relation {
  string name = 1 [ (validate.rules).string = {
    pattern : "^[a-z][a-z0-9_]{2,62}[a-z0-9]$",
    max_bytes : 64,
  } ];
  UsersetRewrite userset_rewrite = 2;
  TypeInformation type_information = 3;
  Metadata metadata = 4;
}

message TypeInformation {
  repeated RelationReference allowed_direct_relations = 1;
}

message UsersetRewrite {
  oneof rewrite_operation {
    option (validate.required) = true;

    SetOperation union = 1 [ (validate.rules).message.required = true ];
    SetOperation intersection = 2 [ (validate.rules).message.required = true ];
    SetOperation exclusion = 3 [ (validate.rules).message.required = true ];
  }
}

message SetOperation {
  message Child {
    message This {}

    oneof child_type {
      option (validate.required) = true;

      This _this = 1;
      ComputedUserset computed_userset = 2
          [ (validate.rules).message.required = true ];
      TupleToUserset tuple_to_userset = 3
          [ (validate.rules).message.required = true ];
      UsersetRewrite userset_rewrite = 4
          [ (validate.rules).message.required = true ];
    }
  }

  repeated Child child = 1 [
    (validate.rules).repeated .min_items = 1,
    (validate.rules).repeated .items.message.required = true
  ];
}

message TupleToUserset {
  message Tupleset {
    string relation = 1 [ (validate.rules).string = {
      pattern : "^[a-z][a-z0-9_]{2,62}[a-z0-9]$",
      max_bytes : 64,
    } ];
  }

  Tupleset tupleset = 1 [ (validate.rules).message.required = true ];
  ComputedUserset computed_userset = 2
      [ (validate.rules).message.required = true ];
}

message ComputedUserset {
  enum Object {
    TUPLE_OBJECT = 0;
    TUPLE_USERSET_OBJECT = 1;
  }

  Object object = 1 [ (validate.rules).enum.defined_only = true ];
  string relation = 2 [ (validate.rules).string = {
    pattern : "^[a-z][a-z0-9_]{2,62}[a-z0-9]$",
    max_bytes : 64,
  } ];
}
